--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,46 +1,149 @@
+nav {
+  position: fixed;
+  width: 100%;
+  height: 67px;
+  top: 0px;
+  z-index: 999;
+  left: 0px;
+}
+
 body {
-    height: 100%;
+  height: 100%;
+}
+
+img {
+  white-space: nowrap;
+  display: inline;
+  vertical-align: top;
+  max-width: 100%;
+}
+
+p {
+  white-space: nowrap;
 }
 
 .example-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .example-sidenav {
-    padding: 20px;
+  padding: 20px;
 }
 
 .mat-drawer {
-    position: fixed;
-    top: 0;
-    left: 0px;
-    height: 100%;
-    width: 300px;
-    outline: 0;
-    box-sizing: border-box;
-    overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0px;
+  height: 100%;
+  width: 300px;
+  outline: 0;
+  box-sizing: border-box;
+  overflow-y: auto;
 }
 
 .mat-drawer-container {
-    height: 100%
+  height: 100%;
 }
 
-.mat-menu-item {
-    background: transparent;
-    color: rgba(0, 0, 0, 0.87);
-    float: left;
-    width: 100%;
-    text-align: left;
-    border-bottom: 1px solid;
-    padding: 10px;
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px;
+.navbar > .container {
+  justify-content: flex-end;
 }
 
-.navbar>.container {
-    justify-content: flex-end;
+.form-inline {
+  margin-right: 4rem;
+}
+
+.row {
+  font-size: 12px;
+}
+
+.col, .col-2 {
+  padding: 0.4rem;
+}
+
+.content {
+  margin-top: 7.2rem;
+}
+
+.nav-link {
+  white-space: nowrap;
+  text-align: center;
+  color: black;
+  font-weight: normal;
+}
+
+li > a:focus {
+  font-weight: bold;
+}
+
+
+button:focus {
+  outline: 0px!important;
+}
+
+
+::ng-deep .matMenuItem:hover {
+  background-color: #efd7a9 !important;
+}
+
+.biggerScreenDiv {
+  font-size: 12px;
+  margin-bottom: 5px;
+  float: left;
+  width: 50%;
+}
+
+.rightAlign {
+  text-align: right;
+}
+
+.smallerScreen {
+  width: 100%;
+  height: 2rem;
+  position: fixed;
+  z-index: 999;
+  top: 67px;
+  left: 0px;
+  background-color: #efd7a9;
+}
+
+.biggerScreen {
+  width: 300px;
+  position: fixed;
+  top: 67px;
+  right: 0px;
+  padding: 10px;
+  z-index: 999;
+  background-color: #f2c979;
+  border-radius: 0px 0px 0px 17px;
+}
+
+@media screen and (max-width: 1500px) {
+  .biggerScreen {
+    display: none;
+  }
+  form {
+    margin-right: 0px !important;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .smallerScreen {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .bigImg {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .smallImg {
+    display: none;
+  }
 }
