--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,70 +1,137 @@
-<h5 style="text-align:center">ELABORAZIONI - Riepilogo Stato Procedure</h5>
-<p style="text-align:center">Procedura in corso: {{proceduraInCorso}}</p>
+<h5>ELABORAZIONI - Riepilogo Stato Procedure</h5>
+<p>Procedura in corso: {{ proceduraInCorso }}</p>
 
-<div style="margin-top:20px; margin-bottom: 100px;">
-    <div *ngFor="let dataSource of dataSources">
-        <h5 style="text-align: center;background-color: #f2c979;margin: 0px;padding: 5px 0px;text-transform: uppercase;">{{dataSource.data[0].SEZIONE}}</h5>
-        <table mat-table [dataSource]="dataSource" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
-            <ng-container matColumnDef="select">
-                <th mat-header-cell *matHeaderCellDef style="padding-left: 4px">
-                    <mat-checkbox (change)="$event ? masterToggle(dataSource.data[0].SEZIONE) : null"
-                                [checked]="getSelect(dataSource.data[0].SEZIONE).hasValue() && isAllSelected(dataSource.data[0].SEZIONE)"
-                                [indeterminate]="getSelect(dataSource.data[0].SEZIONE).hasValue() && !isAllSelected(dataSource.data[0].SEZIONE)">
-                    </mat-checkbox>
-                </th> 
-                <td mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="$event.stopPropagation()"
-                                (change)="$event ? getSelect(dataSource.data[0].SEZIONE).toggle(row) : null"
-                                [checked]="getSelect(dataSource.data[0].SEZIONE).isSelected(row)">
-                    </mat-checkbox>
-                </td>
-            </ng-container> 
-            <ng-container matColumnDef="procedura">
-                <th mat-header-cell *matHeaderCellDef  style="width: 30%;text-align: left; "> Procedura </th>
-                <td mat-cell *matCellDef="let element" [title]="element.DES_CONTO || ''" style="text-align: left; padding: 0px 15px;"> {{ element.TITOLO_PROCEDURA }} </td>
-            </ng-container>
-            <ng-container matColumnDef="stato">
-                <th mat-header-cell *matHeaderCellDef> Stato </th>
-                <td mat-cell *matCellDef="let element"> {{ element.ULTIMA_ELAB?.STATO }} </td>
-            </ng-container>
-            <ng-container matColumnDef="dataInizio">
-                <th mat-header-cell *matHeaderCellDef class="importi"> Data Inizio </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.DATA_INIZIO }} </td>
-            </ng-container>
-            <ng-container matColumnDef="dataFine">
-                <th mat-header-cell *matHeaderCellDef class="importi"> Data Fine </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.DATA_FINE }} </td>
-            </ng-container>
-            <ng-container matColumnDef="DurMedia">
-                <th mat-header-cell *matHeaderCellDef class="importi"> Durata Media </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.DUR_MEDIA }} </td>
-            </ng-container>
-            <ng-container matColumnDef="NumSegn">
-                <th mat-header-cell *matHeaderCellDef class="importi"> Num. Segnalazioni </th>
-                <td mat-cell *matCellDef="let element" class="importi"> 
-                    <a *ngIf="element.ULTIMA_ELAB && element.ULTIMA_ELAB.NUM_SEGN>0" [routerLink]="'/segnalazioni/'+element.ULTIMA_ELAB.ID_ELABORAZIONE">{{ element.ULTIMA_ELAB?.NUM_SEGN }}</a>
-                    <span *ngIf="!element.ULTIMA_ELAB || element.ULTIMA_ELAB.NUM_SEGN==0">{{ element.ULTIMA_ELAB?.NUM_SEGN }}</span>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="Utente">
-                <th mat-header-cell *matHeaderCellDef class="utente"> Utente </th>
-                <td mat-cell *matCellDef="let element" class="importi"> {{ element.ULTIMA_ELAB?.UTENTE }} </td>
-            </ng-container>
-            <ng-container matColumnDef="button">
-                <th mat-header-cell *matHeaderCellDef class="importi">   </th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="secondary" style="background-color: #efd7a9" (click)="addStorico(element.ID_PROCEDURA)">Storico</button>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+<div class="titleDiv">
+  <div *ngFor="let dataSource of dataSources">
+    <h5 class="tableHeader">
+      {{ dataSource.data[0].SEZIONE }}
+    </h5>
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      class="contentTable mat-elevation-z8"
+    >
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? masterToggle(dataSource.data[0].SEZIONE) : null"
+            [checked]="
+              getSelect(dataSource.data[0].SEZIONE).hasValue() &&
+              isAllSelected(dataSource.data[0].SEZIONE)
+            "
+            [indeterminate]="
+              getSelect(dataSource.data[0].SEZIONE).hasValue() &&
+              !isAllSelected(dataSource.data[0].SEZIONE)
+            "
+          >
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="
+              $event ? getSelect(dataSource.data[0].SEZIONE).toggle(row) : null
+            "
+            [checked]="getSelect(dataSource.data[0].SEZIONE).isSelected(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="procedura">
+        <th mat-header-cell *matHeaderCellDef class="proceduraHeader">
+          Procedura
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [title]="element.DES_CONTO || ''"
+          class="nomeProcedura"
+        >
+          {{ element.TITOLO_PROCEDURA }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="stato">
+        <th mat-header-cell *matHeaderCellDef>Stato</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.ULTIMA_ELAB?.STATO }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="dataInizio">
+        <th mat-header-cell *matHeaderCellDef class="importi">Data Inizio</th>
+        <td mat-cell *matCellDef="let element" class="importi">
+          {{ element.ULTIMA_ELAB?.DATA_INIZIO }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="dataFine">
+        <th mat-header-cell *matHeaderCellDef class="importi">Data Fine</th>
+        <td mat-cell *matCellDef="let element" class="importi">
+          {{ element.ULTIMA_ELAB?.DATA_FINE }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="DurMedia">
+        <th mat-header-cell *matHeaderCellDef class="importi">Durata Media</th>
+        <td mat-cell *matCellDef="let element" class="importi">
+          {{ element.DUR_MEDIA }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="NumSegn">
+        <th mat-header-cell *matHeaderCellDef class="importi">
+          Num. Segnalazioni
+        </th>
+        <td mat-cell *matCellDef="let element" class="importi">
+          <a
+            *ngIf="element.ULTIMA_ELAB && element.ULTIMA_ELAB.NUM_SEGN > 0"
+            [routerLink]="
+              '/segnalazioni/' + element.ULTIMA_ELAB.ID_ELABORAZIONE
+            "
+            >{{ element.ULTIMA_ELAB?.NUM_SEGN }}</a
+          >
+          <span
+            *ngIf="!element.ULTIMA_ELAB || element.ULTIMA_ELAB.NUM_SEGN == 0"
+            >{{ element.ULTIMA_ELAB?.NUM_SEGN }}</span
+          >
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Utente">
+        <th mat-header-cell *matHeaderCellDef class="utente">Utente</th>
+        <td mat-cell *matCellDef="let element" class="importi">
+          {{ element.ULTIMA_ELAB?.UTENTE }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="button">
+        <th mat-header-cell *matHeaderCellDef class="importi"></th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button (click)="addStorico(element.ID_PROCEDURA)">
+            Storico
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+  <div class="bottomButtonsContainer">
+    <div class="bottomButtonsDiv">
+      <button
+        mat-raised-button
+        class="bottomButtons"
+        (click)="eseguiProcedure()"
+      >
+        Esegui Procedure
+      </button>
+      <button
+        mat-raised-button
+        class="bottomButtons"
+      >
+        Aggiorna Stato
+      </button>
+      <button
+        mat-raised-button
+        class="bottomButtons"
+        (click)="bloccaProcedure()"
+      >
+        Blocca Procedure
+      </button>
     </div>
-    <div style="position:fixed; bottom: 10px;left: 0px;width: 100%;">
-        <div style="margin:0px auto;display: table;">
-            <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 10px; font-weight: 600;" (click)="eseguiProcedure()">Esegui Procedure</button>
-            <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 10px; font-weight: 600;">Aggiorna Stato</button>
-            <button mat-raised-button color="secondary" style="background-color: #efd7a9;margin-right: 10px; font-weight: 600;" (click)="bloccaProcedure()">Blocca Procedure</button>
-        </div>
-    </div>
+  </div>
 </div>
