--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,28 +1,57 @@
 :host {
-    display: flex;
-    justify-content: center;
-    margin: 100px 0px;
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
 }
 
 .mat-form-field {
-    width: 100%;
-    min-width: 300px;
+  width: 100%;
+  min-width: 300px;
 }
 
 mat-card-title,
 mat-card-content {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .error {
-    padding: 16px;
-    width: 300px;
-    color: white;
-    background-color: red;
+  padding: 16px;
+  width: 300px;
+  color: white;
+  background-color: red;
 }
 
 .button {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
+
+[mat-card-image] {
+  display: block;
+  width: 150px;
+  margin: 0px auto;
+  padding: 30px 10px;
+}
+
+.pl-3 {
+  position: fixed;
+  left: 50%;
+  width: 100px;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.imageDiv {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.7;
+}
+
+button:focus {
+    outline: 0px;
+  }
