--- a/src/app/nuovo-periodo/nuovo-periodo.component.html
+++ b/src/app/nuovo-periodo/nuovo-periodo.component.html
@@ -1,1 +1,89 @@
-<p>nuovo-periodo works!</p>
+<div>
+  <p>
+    Attenzione: verificare la tipologia di default al fine di impostare
+    correttamente il flag TIPOLOGIA_DEFAULT in tabella parametri
+  </p>
+  <h4>Nuovo periodo - selezione periodo</h4>
+</div>
+<br />
+
+<div class="d-flex justify-content-end">
+  <mat-form-field class="firstForm" appearance="fill">
+    <mat-label> Partizione INVALS_GEST </mat-label>
+    <mat-select>
+      <mat-option>Partizione 1</mat-option>
+      <mat-option>Partizione 2</mat-option>
+      <mat-option>Partizione 2</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label> Partizione COUNTERPARTY_MART </mat-label>
+    <mat-select>
+      <mat-option>Partizione 1</mat-option>
+      <mat-option>Partizione 2</mat-option>
+      <mat-option>Partizione 2</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button mat-raised-button class="align-self-start">Cerca</button>
+</div>
+<p>Riepilogo stato procedure</p>
+
+<div class="titleDiv">
+  <div>
+    <h5 class="tableHeader">Inizializzazione</h5>
+    <table
+      [dataSource]="dataSource"
+      mat-table
+      class="contentTable mat-elevation-z8"
+    >
+      <ng-container matColumnDef="procedura">
+        <th mat-header-cell *matHeaderCellDef class="proceduraHeader">
+          Procedura
+        </th>
+        <td mat-cell *matCellDef="let element" class="nomeProcedura">
+          {{ element.TITOLO_PROCEDURA }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="stato">
+        <th mat-header-cell *matHeaderCellDef>Stato</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.STATO }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="dataInizio">
+        <th mat-header-cell *matHeaderCellDef>Data Inizio</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.DATA_INIZIO }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="dataFine">
+        <th mat-header-cell *matHeaderCellDef>Data Fine</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.DATA_FINE }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="DurMedia">
+        <th mat-header-cell *matHeaderCellDef>Durata Media</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.DUR_MEDIA }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="NumSegn">
+        <th mat-header-cell *matHeaderCellDef>Num. Segnalazioni</th>
+        <td mat-cell *matCellDef="let element">
+          <a
+            *ngIf="element.NUM_SEGN > 0"
+            [routerLink]="'/segnalazioni/' + element.ID_PROCEDURA"
+            >{{ element.NUM_SEGN }}</a
+          >
+          <span *ngIf="element.NUM_SEGN == 0">{{ element.NUM_SEGN }}</span>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+</div>
