--- a/src/app/segnalazioni/segnalazioni.component.html
+++ b/src/app/segnalazioni/segnalazioni.component.html
@@ -1,6 +1,6 @@
 <h5 style="text-align:center">Segnalazioni</h5>
-<div style="margin-top:20px; margin-bottom: 100px;">
-    <table mat-table [dataSource]="dataSource" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
+<div class="titleDiv">
+    <table mat-table [dataSource]="dataSource" class="contentTable mat-elevation-z8">
         <ng-container matColumnDef="cod">
             <th mat-header-cell *matHeaderCellDef> Codice </th>
             <td mat-cell *matCellDef="let element"> {{ element.COD_ERRORE }} </td>
