--- a/src/app/storico-elaborazione/storico-elaborazione.component.html
+++ b/src/app/storico-elaborazione/storico-elaborazione.component.html
@@ -1,6 +1,6 @@
-<h5 style="text-align:center">Storico procedura: <strong style="text-transform: uppercase;">{{ nomeProc }}</strong></h5>
-<div style="margin-top:20px; margin-bottom: 100px;">
-    <table mat-table [dataSource]="dataSources" style="width:100%;margin-bottom:15px" class="contentTable mat-elevation-z8">
+<h5>Storico procedura: <strong>{{ nomeProc }}</strong></h5>
+<div class="titleDiv">
+    <table mat-table [dataSource]="dataSources" class="contentTable mat-elevation-z8">
         <ng-container matColumnDef="stato">
             <th mat-header-cell *matHeaderCellDef> Stato </th>
             <td mat-cell *matCellDef="let element"> {{ element.STATO }} </td>
