--- a/src/styles.css
+++ b/src/styles.css
@@ -39,9 +39,11 @@ body {
 .cdk-overlay-connected-position-bounding-box{
     top:67px !important;
 }
+/*
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     text-decoration: underline;
-}
+} 
+*/
 .mat-table {
     box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 7%), 0px 8px 10px 1px rgb(0 0 0 / 5%), 0px 3px 3px 2px rgb(0 0 0 / 3%) !important;
 }
